# FORGE

./: .gitignore  README.md  pyproject.toml
Documento do projeto/: Cronograma Geral.md  Escopo do projeto.md  Ideia do projeto - Forge.md  Issues - Cronograma GitHub.md  MVP inicial - Forge v0.1.md  README.md  Stack do projeto.md
forge/forge/ai/: __init__.py  adapter.py  claude_adapter.py  factory.py  ollama_adapter.py  openai_adapter.py
forge/forge/bots/: __init__.py  dev.py  engineer.py  qa.py
forge/forge/cli/: app.py  main.py
forge/forge/cli/commands/: approve.py  dev_run.py  engineer_review.py  init.py  logs.py  plan.py  qa_run.py  status.py
forge/forge/core/: config.py  forge_dir.py  logging.py
forge/forge/state/: machine.py  model.py  store.py
tests/: test_workflow_e2e.py
